Update news section regarding hosting.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,6 @@
         Mon Mar 22 13:21:35 CET 2010
         The run for [;m=3;], [;r=5;], [;q=8;] finished after well over 47000 CPU minutes, and
         the tables are now added.
-        -->
         <br />
         Wed Jan  5 22:39:36 CET 2011
         The code has been optimized in a number of ways; the online version
@@ -174,10 +173,15 @@
         Wed Jun  1 14:30:50 CEST 2011
         Now using TeXtheWorld instead of jsMath, and just using the stylesheet
         from LaTeXMathML.
+        -->
         <br />
         Tue Sep 27 20:15:45 CEST 2011
-	The data files are now put in a <a href="zeros.zip">zip</a> and a
+        The data files are now put in a <a href="zeros.zip">zip</a> and a
         <a href="zeros.tar.gz">tar.gz</a> file.
+        <br />
+        Fri 28 Feb 21:37:46 CET 2014
+        Site moved from own hosting to <a href="http://pages.github.com">github
+        pages</a>.
         </p>
 
         <h2 class="section" id="SEC2">2.&nbsp;Background</h2>
