--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         a polynomial.  The function [;D(i_1, \ldots  ,i_m,r,s_1, \ldots  ,s_m);]
         from <a href="#geil2009a">[3]</a> upper bounds this number. Similarly,
         the function [;H(i_1, \ldots , i_m,r,s_1, \ldots , s_m);] from
-        <a href="#geil2009a">[3]</a> serve as a lower bound. Below we list
+        <a href="#geil2014a">[4]</a> serve as a lower bound. Below we list
         values of [;D(i_1, \ldots , i_m,r,q, \ldots ,q);] and [;H(i_1, \ldots ,
         i_m,r,q, \ldots ,q);] for a number of cases. The upper bound
         [;D(i_1,\ldots,i_m,r,q,\ldots,q);] is an improvement to the upper bound
@@ -602,7 +602,7 @@
 
         <h3 class="subsection" id="SEC3.1">3.1.&nbsp;Closed formula when [;m=2;]</h3>
         <p>
-        Proposition 19 in <a href="#geil2009a">[3]</a> upper bounds
+        Proposition 16 in <a href="#geil2014a">[4]</a> upper bounds
         [;D(i_1,i_2,r,s_1,s_2);] by closed formulas.
         </p>
 
@@ -799,11 +799,16 @@
         </div>
         <div class="reference" id="geil2009a">
             <strong>[3]</strong>
-            Geil, O., Thomsen, C.: "On the number of zeros of multiplicity
-            [;r;]",
-            <a href="http://arxiv.org/abs/0912.1436v2">arXiv:0912.1436v2</a>,
-            2009, 21 pages.
+            Geil, O., Thomsen, C.: "Weighted Reed—Muller
+            codes revisited," Designs, codes and cryptography,
+            Vol. 66, 2013, pp. 195—220.
         </div>
+        <div class="reference" id="geil2014a">
+            <strong>[4]</strong>
+            Geil, O., Thomsen, C.: "More results on the number zeros of
+            multiplicity [;r;]," manuscript, 2014, 14 pages.
+        </div>
+
 
           <p style="text-align: center;">
           <a href="http://validator.w3.org/check?uri=referer"><img
